# etl_assainissement_data

./: .gitignore  README.md  TESTING.md  pyproject.toml
dags/: dag assainissement.py
sql/: create_schema_mysql.sql  create_schema_postgres.sql
src/: __init__.py
src/config/: database.py  logging_config.py
src/extract/: __init__.py  mysql_extractor.py
src/load/: __init__.py  mysql_loader.py
src/transform/: __init__.py  config.yaml  orchestrateur.py  transformateur_tables.py  transformateur_tpar_defaut.py
tests/: inspection.ipynb  test.py  test_transform.py
